; ModuleID = '/home/carl/AnghaBench/Cinder/src/glfw/src/extr_wl_monitor.c_scale.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/glfw/src/extr_wl_monitor.c_scale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wl_output = type { i32 }
%struct._GLFWmonitor = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wl_output*, i32)* @scale to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @scale(i8* %0, %struct.wl_output* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wl_output*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct._GLFWmonitor*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.wl_output* %1, %struct.wl_output** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct._GLFWmonitor*
  store %struct._GLFWmonitor* %9, %struct._GLFWmonitor** %7, align 8
  %10 = load i32, i32* %6, align 4
  %11 = load %struct._GLFWmonitor*, %struct._GLFWmonitor** %7, align 8
  %12 = getelementptr inbounds %struct._GLFWmonitor, %struct._GLFWmonitor* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  store i32 %10, i32* %13, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
